--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +40,7 @@
     <section>
         <div class="container mt-4 align-items-center justify-content-center">
           <div>
-            <img class="imagem  " src="">
+            <img class="imagem img-fluid" id="img-api" src="">
             <dl class="lista">
           </div>
     
