--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
    
     </section>
     <section>
-        <div class="container mt-4 align-items-center justify-content-center">
-          <div>
-            <img class="imagem img-fluid" id="img-api" src="">
-            <dl class="lista">
+        <div class="container mt-4  align-items-center justify-content-center">
+          <div >
+            <img class="imagem img-fluid mb-2 mt-2" id="img-api" src="">
+            <dl class="lista p-1 ms-1 ">
           </div>
     
             
